# deitos-cli

./: Cargo.toml  README.md  deitos.scale
examples/: file_to_fail.txt  grant.txt
src/: chain.rs  jwt.rs  main.rs
src/cmd/: mod.rs  upload.rs
