[package]
name = "deitos-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
jwt = "0.16"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"

subxt = { version = "0.34", features = ["substrate-compat"] }
sc-cli = "0.36"
sp-core = "28.0"
